--- a/comp_rendering/package.json
+++ b/comp_rendering/package.json
@@ -12,10 +12,13 @@
   "keywords": [],
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.5.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "serverless-helpers-js": "~0.1.0"
   }
 }
