--- a/package.json
+++ b/package.json
@@ -10,22 +10,40 @@
     "url": "git://github.com/"
   },
   "scripts": {
-    "start": "npm run serve",
-    "watch": "nodemon -w ./main",
-    "serve": "cross-env DEBUG=true sls serve start -P 3000",
-    "db:listTables": "babel-node dynamodb/listTables.js",
-    "db:createTables": "babel-node dynamodb/createTables.js",
-    "db:deleteTables": "babel-node dynamodb/deleteTables.js"
+    "x": "npm run dev & npm run watch",
+    "start": "npm run offline",
+    "watch": "nodemon -w ./comp_rendering",
+    "offline": "sls offline start",
+    "dev": "babel-node dev_server/dev_server.js",
+    "deploy": "npm run build && sls dash deploy",
+    "build": "npm run build:clean && npm run build:compile && npm run build:deploy",
+    "build:clean": "rimraf dist",
+    "build:compile": "webpack --config dev_server/webpack.config.prod.js",
+    "build:deploy": "aws s3 cp dist/bundle.js s3://aquest-client/bundle.js --acl public-read",
+    "db:listTables": "babel-node scripts/dynamodb/listTables.js",
+    "db:createTables": "babel-node scripts/dynamodb/createTables.js",
+    "db:deleteTables": "babel-node scripts/dynamodb/deleteTables.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
+  },
   "devDependencies": {
-    "aws-sdk": "^2.2.35",
+    "aws-sdk": "^2.2.36",
+    "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-2": "^6.5.0",
     "babelify": "^7.2.0",
     "cross-env": "^1.0.7",
     "dotenv": "^2.0.0",
+    "express": "^4.13.4",
+    "rimraf": "^2.5.2",
+    "serverless-offline": "^0.1.1",
     "serverless-optimizer-plugin": "^1.1.0",
-    "serverless-serve": "^1.5.0"
+    "webpack": "^1.12.13",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.7.1"
   }
 }
