--- a/s-project.json
+++ b/s-project.json
@@ -6,11 +6,16 @@
   "author": "David Hérault",
   "description": "A Slick New Serverless Project",
   "custom": {
+    "serverless-serve": {
+      "babelOptions": {
+        "presets": ["es2015", "stage-2", "react"]
+      }
+    },
     "serverless-offline": {
       "babelOptions": {
         "presets": ["es2015", "stage-2", "react"]
       }
     }
   },
-  "plugins": ["serverless-optimizer-plugin", "serverless-offline"]
+  "plugins": ["serverless-optimizer-plugin", "serverless-offline", "serverless-serve"]
 }
