--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "x": "npm run dev & npm run watch",
     "start": "npm run offline",
     "watch": "nodemon -w ./comp_main",
-    "offline": "sls offline start",
+    "offline": "sls offline start -p dev",
+    "serve": "sls serve start -p dev",
     "dev": "babel-node dev_server/dev_server.js",
     "deploy": "npm run build && sls dash deploy",
     "build": "npm run build:clean && npm run build:compile && npm run build:deploy",
@@ -33,8 +34,8 @@
     "redux": "^3.3.1"
   },
   "devDependencies": {
-    "aws-sdk": "^2.2.36",
-    "babel-loader": "^6.2.2",
+    "aws-sdk": "^2.2.37",
+    "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.0",
@@ -44,8 +45,9 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "rimraf": "^2.5.2",
-    "serverless-offline": "^0.1.1",
+    "serverless-offline": "^0.1.3",
     "serverless-optimizer-plugin": "^1.1.0",
+    "serverless-serve": "^1.5.2",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.7.1"
