--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "start": "npm run offline",
     "watch": "nodemon -w ./comp_main",
     "offline": "sls offline start -p dev",
-    "serve": "sls serve start -p dev",
+    "serve": "sls serve start -p dev -P 3000",
     "dev": "babel-node dev_server/dev_server.js",
-    "deploy": "npm run build && sls dash deploy",
-    "build": "npm run build:clean && npm run build:compile && npm run build:deploy",
-    "build:clean": "rimraf dist",
-    "build:compile": "webpack --config dev_server/webpack.config.prod.js",
-    "build:deploy": "aws s3 cp dist/bundle.js s3://aquest-client/bundle.js --acl public-read",
+    "deploy": "npm run build_client && npm run deploy_client",
+    "build_client": "npm run build_client:clean && npm run build_client:compile",
+    "build_client:clean": "rimraf client/dist",
+    "build_client:compile": "npm run build_client:compile:js",
+    "build_client:compile:js": "webpack --config dev_server/webpack.config.prod.js",
+    "deploy_client": "npm run deploy_client:js",
+    "deploy_client:js": "aws s3 cp client/dist/bundle.js s3://aquest-client/bundle.js --acl public-read",
     "db:listTables": "babel-node scripts/dynamodb/listTables.js",
     "db:createTables": "babel-node scripts/dynamodb/createTables.js",
     "db:deleteTables": "babel-node scripts/dynamodb/deleteTables.js"
@@ -45,6 +47,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "rimraf": "^2.5.2",
+    "serverless-client-s3": "0.0.1",
     "serverless-offline": "^0.1.3",
     "serverless-optimizer-plugin": "^1.1.0",
     "serverless-serve": "^1.5.2",
