--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "serve": "sls serve start -p dev -P 3000",
     "dev": "babel-node dev_server/dev_server.js",
     "deploy": "npm run build_client && npm run deploy_client",
-    "build_client": "npm run build_client:clean && npm run build_client:compile",
+    "build_client": "npm run build_client:clean && npm run build_client:js && npm run build_client:css",
     "build_client:clean": "rimraf client/dist",
-    "build_client:compile": "npm run build_client:compile:js",
-    "build_client:compile:js": "webpack --config dev_server/webpack.config.prod.js",
-    "deploy_client": "npm run deploy_client:js",
+    "build_client:js": "cross-env NODE_ENV=production webpack --config dev_server/webpack.config.prod.js --progress",
+    "build_client:css": "cleancss -o client/dist/bundle.css client/src/stylesheets/app.css",
+    "deploy_client": "npm run deploy_client:js && npm run deploy_client:css",
     "deploy_client:js": "aws s3 cp client/dist/bundle.js s3://aquest-client/bundle.js --acl public-read",
+    "deploy_client:css": "aws s3 cp client/dist/bundle.css s3://aquest-client/bundle.css --acl public-read",
     "db:listTables": "babel-node scripts/dynamodb/listTables.js",
     "db:createTables": "babel-node scripts/dynamodb/createTables.js",
     "db:deleteTables": "babel-node scripts/dynamodb/deleteTables.js"
@@ -43,7 +44,9 @@
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-2": "^6.5.0",
     "babelify": "^7.2.0",
+    "clean-css": "^3.4.9",
     "cross-env": "^1.0.7",
+    "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "rimraf": "^2.5.2",
@@ -51,6 +54,7 @@
     "serverless-offline": "^0.1.3",
     "serverless-optimizer-plugin": "^1.1.0",
     "serverless-serve": "^1.5.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.7.1"
