--- a/comp_main/package.json
+++ b/comp_main/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "babel-polyfill": "^6.5.0",
     "chalk": "^1.1.1",
+    "html-minifier": "^1.2.0",
     "lodash.isplainobject": "^4.0.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
