--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "url": "git://github.com/"
   },
   "scripts": {
-    "x": "npm run dev & npm run watch",
-    "start": "npm run offline",
-    "watch": "nodemon -w ./comp_main",
+    "x": "",
+    "start": "npm run dev & npm run offline",
     "offline": "sls offline start -p dev",
     "serve": "sls serve start -p dev -P 3000",
     "dev": "babel-node dev_server/dev_server.js",
-    "deploy": "npm run build_client && npm run deploy_client",
+    "deploy": "npm run build_client && npm run deploy_client && npm run display_js_bundle_size",
     "build_client": "npm run build_client:clean && npm run build_client:js && npm run build_client:css",
     "build_client:clean": "rimraf client/dist",
     "build_client:js": "cross-env NODE_ENV=production webpack --config dev_server/webpack.config.prod.js --progress",
+    "build_client:js:display": "cross-env NODE_ENV=production webpack --config dev_server/webpack.config.prod.js --progress --display-modules",
     "build_client:css": "cleancss -o client/dist/bundle.css client/src/stylesheets/app.css",
     "deploy_client": "npm run deploy_client:js && npm run deploy_client:css",
     "deploy_client:js": "aws s3 cp client/dist/bundle.js s3://aquest-client/bundle.js --acl public-read",
     "deploy_client:css": "aws s3 cp client/dist/bundle.css s3://aquest-client/bundle.css --acl public-read",
+    "display_js_bundle_size": "du -h client/dist/bundle.js",
     "db:listTables": "babel-node scripts/dynamodb/listTables.js",
     "db:createTables": "babel-node scripts/dynamodb/createTables.js",
     "db:deleteTables": "babel-node scripts/dynamodb/deleteTables.js"
@@ -33,13 +34,14 @@
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
-    "react-router-redux": "^3.0.0",
+    "react-router-redux": "^4.0.0",
     "redux": "^3.3.1"
   },
   "devDependencies": {
-    "aws-sdk": "^2.2.37",
+    "aws-sdk": "^2.2.38",
     "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015-rollup": "^1.1.1",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-2": "^6.5.0",
@@ -49,13 +51,16 @@
     "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "postcss-cssnext": "^2.4.0",
+    "postcss-loader": "^0.8.1",
     "rimraf": "^2.5.2",
+    "rollup-plugin-babel": "^2.4.0",
     "serverless-client-s3": "0.0.1",
-    "serverless-offline": "^0.1.3",
+    "serverless-offline": "^0.2.1",
     "serverless-optimizer-plugin": "^1.1.0",
     "serverless-serve": "^1.5.2",
     "style-loader": "^0.13.0",
-    "webpack": "^1.12.13",
+    "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.7.1"
   }
