--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A Serverless Project and its Serverless Plugin dependencies.",
   "author": "me",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "private": false,
   "repository": {
     "type": "git",
@@ -13,21 +13,22 @@
     "x": "",
     "start": "npm run dev & npm run offline",
     "offline": "sls offline start -p dev",
+    "offline_dev": "sls offline start -p dev --debugOffline",
     "serve": "sls serve start -p dev -P 3000",
     "dev": "babel-node dev_server/dev_server.js",
     "deploy": "npm run build_client && npm run deploy_client && npm run display_js_bundle_size",
     "build_client": "npm run build_client:clean && npm run build_client:js && npm run build_client:css",
     "build_client:clean": "rimraf client/dist",
-    "build_client:js": "cross-env NODE_ENV=production webpack --config dev_server/webpack.config.prod.js --progress",
-    "build_client:js:display": "cross-env NODE_ENV=production webpack --config dev_server/webpack.config.prod.js --progress --display-modules",
+    "build_client:js": "webpack --config dev_server/webpack.config.prod.js --progress",
+    "build_client:js:display": "webpack --config dev_server/webpack.config.prod.js --progress --display-modules",
     "build_client:css": "cleancss -o client/dist/bundle.css client/src/stylesheets/app.css",
     "deploy_client": "npm run deploy_client:js && npm run deploy_client:css",
     "deploy_client:js": "aws s3 cp client/dist/bundle.js s3://aquest-client/bundle.js --acl public-read",
     "deploy_client:css": "aws s3 cp client/dist/bundle.css s3://aquest-client/bundle.css --acl public-read",
     "display_js_bundle_size": "du -h client/dist/bundle.js",
     "db:listTables": "babel-node scripts/dynamodb/listTables.js",
-    "db:createTables": "babel-node scripts/dynamodb/createTables.js",
-    "db:deleteTables": "babel-node scripts/dynamodb/deleteTables.js"
+    "db:createTables": "babel-node scripts/dynamodb/createTables.js && npm run db:listTables",
+    "db:deleteTables": "babel-node scripts/dynamodb/deleteTables.js && npm run db:listTables"
   },
   "dependencies": {
     "react": "^0.14.7",
@@ -47,7 +48,6 @@
     "babel-preset-stage-2": "^6.5.0",
     "babelify": "^7.2.0",
     "clean-css": "^3.4.9",
-    "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
@@ -55,8 +55,7 @@
     "postcss-loader": "^0.8.1",
     "rimraf": "^2.5.2",
     "rollup-plugin-babel": "^2.4.0",
-    "serverless-client-s3": "0.0.1",
-    "serverless-offline": "^0.2.1",
+    "serverless-offline": "^1.0.1",
     "serverless-optimizer-plugin": "^1.1.0",
     "serverless-serve": "^1.5.2",
     "style-loader": "^0.13.0",
