--- a/comp_main/package.json
+++ b/comp_main/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.5.0",
+    "bcrypt": "^0.8.5",
     "chalk": "^1.1.1",
     "graphql": "^0.4.18",
     "graphql-custom-types": "^0.2.0",
@@ -28,6 +29,7 @@
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
-    "serverless-helpers-js": "~0.1.0"
+    "serverless-helpers-js": "~0.1.0",
+    "uuid": "^2.0.1"
   }
 }
