--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,4 @@ dynamo.env
 # This project
 client/dist/
 _meta/_tmp/
-!comp_main/lib/server/bcrypt_lambda/node_modules
+!/comp_main/lib/server/bcrypt_lambda/node_modules/**/*
